adjust site permission for post

--- a/app/views/sites/editSite.scala.html
+++ b/app/views/sites/editSite.scala.html
@@ -40,7 +40,13 @@ title =  "食美特，不一样的生活"
 
                         </div>
                     </div>
-
+                    <div class="form-row clearfix">
+                        <label>发帖权限：</label>
+                        <div class="fm-item">
+                         <input type="radio" name="permission" value="0" checked="checked" class="fm-radio"> 所有人
+                        <input type="radio" name="permission" value="1" class="fm-radio"> 小镇居民
+                        </div>
+                    </div>
                     <div class="form-row clearfix">
                         <label>上传站牌：</label>
                         <div class="fm-item">
