--- a/app/views/sites/post.scala.html
+++ b/app/views/sites/post.scala.html
@@ -135,7 +135,7 @@ title =  "食美特，不一样的生活"
                          <ul id="J_commentList">
 
                          </ul>
-                         <form  method="post" id="J_postComment" action="/post/addComment">
+                         <form  method="post" id="J_postCommentForm" action="/post/addComment">
                              <input type="hidden" name="pid" id="J_pid" value="@post._1.id.get">
                              <input type="hidden" name="cid" id="J_cid" value="0">
                              <input type="hidden" name="quoteContent" id="J_quoteContent">
