--- a/app/views/themes/view.scala.html
+++ b/app/views/themes/view.scala.html
@@ -125,7 +125,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
                         <ul id="J_commentList">
 
                         </ul>
-                        <form  method="post" id="J_postComment" action="/theme/addComment">
+                        <form  method="post" id="J_postCommentForm" action="/theme/addComment">
                             <input type="hidden" name="themeId" id="J_themeId" value="@theme.id.get">
 
                             <input type="hidden" name="quoteContent" id="J_quoteContent">
