adjust all favor.js function name in order to avoid inflict

--- a/app/views/pages/sites.scala.html
+++ b/app/views/pages/sites.scala.html
@@ -125,6 +125,6 @@ title =  "食美特，爱美食爱生活"
         }{
 
 <script type="text/javascript">
-    seajs.use(['smeite/site/sites','smeite/site/favor'])
+    seajs.use(['smeite/site/sites','smeite/site/siteFavor'])
 </script>
 }
