--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -216,6 +216,6 @@ title =  "食美特，不一样的生活"
         }{
 
 <script type="text/javascript">
-    seajs.use(['$','smeite/site/favor','smeite/site/site'])
+    seajs.use(['$','smeite/site/siteFavor','smeite/site/site'])
 </script>
 }
