add post extra tags

--- a/app/views/admin/managers/index.scala.html
+++ b/app/views/admin/managers/index.scala.html
@@ -104,7 +104,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href='@@controllers.admin.routes.Managers.cache'>
+                        <a href='@controllers.admin.routes.Managers.cache'>
                             <i class="icon-database"></i>
                             缓存管理
                         </a>
