--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -108,7 +108,7 @@ title =  "食美特，不一样的生活"
                     <div class="form-row post-tags clearfix">
                         <label>标签：</label>
                         <div class="fm-item">
-                            <input type="text" class="b-input" name="tags" id="J_tags"  value='@form("tags").value'>
+                            <input type="text" class="b-input" rel="tagsInput" name="tags" id="J_tags"  value='@form("tags").value'>
                             <p>多个标签用逗号隔开</p>
                         </div>
                     </div>
