--- a/app/views/themes/getComments.scala.html
+++ b/app/views/themes/getComments.scala.html
@@ -22,7 +22,7 @@
 </li>
 
         }
-@if(page.nums !=0){
+@if(page.nums.length !=0){
 <div class="clearfix ">
     <div class="pagin inlineblock clearfix" id="goodsComments" >
 
