--- a/app/views/sites/editSite.scala.html
+++ b/app/views/sites/editSite.scala.html
@@ -65,7 +65,7 @@ title =  "食美特，不一样的生活"
                     <div class="form-row clearfix">
                         <label>标签：</label>
                         <div class="fm-item">
-                            <input type="text" class="b-input" name="tags" id="J_tags"  value='@form("tags").value'>
+                            <input  rel="tagsInput" type="text" class="b-input" name="tags" id="J_tags"  value='@form("tags").value'>
                             <p>多个标签用逗号隔开</p>
                         </div>
                     </div>
