--- a/public/assets/css/template/theme.css
+++ b/public/assets/css/template/theme.css
@@ -702,11 +702,10 @@
      position: absolute;
      height: 14px;
      overflow: hidden;
-     background: url(images/ico_common.png) no-repeat -272px -3632px;
+     background: url(images/left-arrow.png) no-repeat 0 0;
      width: 10px;
      left: 51px;
      top: 13px;
-     background-position: -289px -3632px;
  }
  .comment-list .share-user {
      border: 1px solid #e5e5e5;
